# starsector-mod-manager-rust

./: .gitignore  ATTRIBUTION  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain  rustfmt.toml  vcpkg.json
.cargo/: config  config.toml
.github/workflows/: check_deploy_version.yml  linux_dynamic.yml  linux_static.yml  linux_static_debug.yml  macos.yml  vcpkg.json  windows.yml  windows_debug.yml
benches/: env.rs  main.rs
docs/: index.html
examples/: dim_constraints.rs
include/: bit7z_adapter.h
moss/: Cargo.toml
moss-sys/: Cargo.toml  build.rs
moss-sys/examples/: dim_constraints.rs  macos.rs
moss-sys/src/: app.rs  entrypoint.rs  formatter.rs  lib.rs  nav_bar.rs  theme.rs  util.rs
moss-sys/src/app/: app_delegate.rs  installer.rs  launch.rs  mod_description.rs  mod_entry.rs  mod_list.rs  mod_repo.rs  modal.rs  settings.rs  updater.rs
moss-sys/src/app/browser/: controls.rs  mod.rs
moss-sys/src/app/controllers/: app_controller.rs  delayed_painter.rs  dim_constraints.rs  extensible_controller.rs  hover_controller.rs  install_controller.rs  linked_heights.rs  max_size_box.rs  mod.rs  on_cmd.rs  on_event.rs
moss-sys/src/app/mod_list/: headings.rs  refresh.rs  search.rs
moss-sys/src/app/mod_list/filters/: filter_button.rs  filter_options.rs  mod.rs
moss-sys/src/app/mod_list/install/: install_options.rs  mod.rs
moss-sys/src/app/overlays/: browser_install.rs  confirm_delete.rs  duplicate.rs  launch_result.rs  mod.rs  overwrite.rs  remote_update.rs  select_install.rs  self_update.rs
moss-sys/src/app/settings/: theme_editor.rs
moss-sys/src/app/tools/: jre.rs  mod.rs  vmparams.rs
moss-sys/src/icons/: icon.rs
moss-sys/src/patch/: click.rs  mod.rs  separator.rs  tree.rs
moss-sys/src/patch/table/: fixed.rs  flex_table.rs  mod.rs
moss-sys/src/patch/tabs/: mod.rs  tab.rs  tabs_policy.rs
moss-sys/src/widgets/: card.rs  card_button.rs  mod.rs  root_stack.rs  wrapped_table.rs
moss-sys/tests/assets/: vmparams_macos
moss/src/: main.rs
proc-macros/: Cargo.toml
proc-macros/src/: invert.rs  lib.rs
scripts/: make_portable.sh
src/: app.rs  archive_handler.rs  bit7z.rs  bit7z_adapter.cpp  gui.rs  lib.rs  main.rs  nav_bar.rs  style.rs  theme.rs  util.rs  web_client.rs  webview.rs
src/app/: activity.rs  app_delegate.rs  installer.rs  launch.rs  mod_description.rs  mod_entry.rs  mod_list.rs  mod_repo.rs  modal.rs  settings.rs  updater.rs
src/app/browser/: button.rs  mod.rs
src/app/controllers/: anim_controller.rs  app_controller.rs  delayed_painter.rs  dim_constraints.rs  extensible_controller.rs  hover_controller.rs  install_controller.rs  invis.rs  linked_heights.rs  mod.rs  mod_entry_click_controller.rs  mod_list_controller.rs  on_cmd.rs  on_event.rs  on_hover.rs  on_notif.rs  rotate.rs
src/app/mod_list/: headings.rs  install_button.rs  refresh.rs  search.rs
src/app/mod_list/filters/: filter_button.rs  filter_options.rs  mod.rs
src/app/mod_list/install/: install_button.rs  install_options.rs  mod.rs
src/app/overlays/: browser_install.rs  confirm_delete.rs  duplicate.rs  launch_result.rs  mod.rs  multiple.rs  overwrite.rs  remote_update.rs  select_install.rs
src/app/settings/: jre.rs  theme_editor.rs  vmparams.rs
src/app/tools/: jre.rs  mod.rs  vmparams.rs
src/gui/: dialog.rs  install.rs  installer.rs  mod_list.rs  settings.rs  util.rs
src/gui/dialogs/: dialog.rs  macos.rs  other.rs
src/gui/mod_list/: headings.rs
src/gui/settings/: vmparams.rs
src/icons/: icon.rs  mod.rs
src/patch/: click.rs  match_dimensions.rs  mod.rs  separator.rs  split.rs  tabs_policy.rs  tooltip.rs  tree.rs
src/patch/table/: fixed.rs  flex_table.rs  mod.rs  table_column_width.rs  table_data.rs  table_iter.rs
src/patch/tabs/: mod.rs  tab.rs  tabs_policy.rs
src/widgets/: card.rs  card_button.rs  ecs.rs  mod.rs  root_stack.rs  unconditional_painter.rs  wrapped_table.rs
tests/assets/: vmparams_linux  vmparams_windows
webview-subsystem/: Cargo.toml
webview-subsystem-shared/: Cargo.toml
webview-subsystem-shared/src/: lib.rs
webview-subsystem/src/: init.js  lib.rs  links.rs
wix/: License.rtf  main.wxs
