cargo-features = ["codegen-backend"]

[package]
name = "moss"
version = "0.7.2"
authors = ["ikl"]
edition = "2018"
description = "A mod manager for the game Starsector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "moss"
path = "src/main.rs"

[dependencies]
druid = { workspace = true, default-features = true, features = ["im", "serde", "raw-win-handle"] }
druid-widget-nursery = { workspace = true, default-features = false, features = ["material-icons", "async", "hot-reload", "derive"] }
infer = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt-multi-thread", "process", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
json5 = { workspace = true }
json_comments = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json"]}
serde-aux = { workspace = true }
handwritten-json = { workspace = true }
unrar = { workspace = true }
opener = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
compress-tools = { workspace = true }
remove_dir_all = { workspace = true }
sublime_fuzzy = { workspace = true }
classfile-parser = { workspace = true }
zip = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tap = { workspace = true }
rayon = { workspace = true }
self_update = { workspace = true, default-features = false, features = ["rustls"] }
indexmap = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
interprocess = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
const_format = { workspace = true }
anyhow = { workspace = true }
junction = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
deunicode = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
wry = { workspace = true }
thiserror = { workspace = true }
internment = { workspace = true }
comemo = { workspace = true }
fake = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
native-dialog = "0.6.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.12.1"

[dependencies.webview-subsystem]
path = "./webview-subsystem"

[dependencies.webview-shared]
path = "./webview-subsystem-shared"

[dependencies.proc-macros]
path = "./proc-macros"

[package.metadata.bundle]
name = "MOSS"
id = "org.laird.moss"
osx_minimum_system_version = "10.10"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "64ca152891d6ab135c6c27881e7eb0ac2fa15bba"
dependencies = ["libarchive:x64-windows-static"]

[package.metadata.packager]
name = "MOSS"
identifier = "org.laird.moss"
before-packaging-command = "cargo build --release"

[package.metadata.packager.appimage]
bins = ["/usr/bin/xdg-open"]
libs = [
  "WebKitNetworkProcess",
  "WebKitWebProcess",
  "libwebkit2gtkinjectedbundle.so",
  "libayatana-appindicator3.so.1",
]

[package.metadata.packager.appimage.linuxdeploy-plugins]
"gtk" = "https://raw.githubusercontent.com/tauri-apps/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh"

[package.metadata.packager.macos]
minimum_system_version = "10.10"

# [profile.dev]
# codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
  "webview-subsystem",
  "webview-subsystem-shared",
  "proc-macros"
]

[workspace.dependencies]
wry = { git = "https://github.com/atlanticaccent/wry.git", branch = "screenshot-v2" }
druid = { git = "https://github.com/atlanticaccent/druid", default-features = false, features = ["raw-win-handle"], branch = "update-raw-win-handle" }
druid-widget-nursery = { git = "https://github.com/atlanticaccent/druid-widget-nursery", default-features = false }
tokio = { version = "1.6.0" }
infer = "0.3.4"
chrono = { version = "0.4.19" }
serde = { version = "1.0.126" }
serde_json = "1.0"
json5 = "0.3.0"
json_comments = "0.1.0"
reqwest = { version = "0.11.7", default-features = false }
serde-aux = "2.1.1"
handwritten-json = { git = "https://github.com/atlanticaccent/rust-handwritten-json.git" }
unrar = "0.4.4"
opener = "0.5"
directories = "3.0"
tempfile = "^3.2"
compress-tools = "0.14.1"
remove_dir_all = "^0.7.0"
sublime_fuzzy = "0.7.0"
classfile-parser = "~0.3"
zip = "^0.5"
regex = "1.5"
lazy_static = "1.4"
strum = "0.23"
strum_macros = "0.23"
tap = "1.0.1"
rayon = "1.5"
self_update = { version = "0.29.0", default-features = false }
indexmap = "1.8.0"
clap = { version = "3.1.6" }
interprocess = { git = "https://github.com/kotauskas/interprocess", rev = "5a16b3a" }
bincode = "1.3.3"
rand = "0.8.5"
base64 = "0.13.0"
const_format = "0.2.22"
anyhow = "1.0.57"
junction = "0.2.0"
flate2 = "1.0"
tar = "0.4"
deunicode = "1.3.2"
xxhash-rust = { version = "0.8.6" }
thiserror = "1.0.50"
internment = "0.7.4"
syn = "2.0.48"
quote = "1.0.35"
comemo = "0.4.0"
fake = { version = "2.9.2", features = ["derive", "chrono", "chrono-tz"] }
extend = "1.2.0"
itertools = "0.12.1"
# raw_window_handle = "0.6"
