cargo-features = ["codegen-backend"]

# [profile.dev]
# codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
  "moss",
  "moss-sys",
  "webview-subsystem",
  "webview-subsystem-shared",
  "proc-macros",
]

[workspace.dependencies]
moss-sys = { path = "moss-sys" }
proc-macros = { path = "proc-macros" }
webview-subsystem = { path = "webview-subsystem" }
webview-shared = { path = "webview-subsystem-shared" }

wry = { git = "https://github.com/atlanticaccent/wry.git", branch = "screenshot-v2" }
druid = { git = "https://github.com/atlanticaccent/druid", default-features = false, features = [
  "raw-win-handle",
], branch = "faster-hashing" }
druid-widget-nursery = { git = "https://github.com/atlanticaccent/druid-widget-nursery", default-features = false }
tokio = { version = "1.6.0" }
infer = "0.3.4"
chrono = { version = "0.4.19" }
serde = { version = "1.0.126" }
serde_json = "1.0"
json5 = "0.3.0"
json_comments = "0.1.0"
reqwest = { version = "0.12.5", default-features = false }
serde-aux = "4.5.0"
handwritten-json = { git = "https://github.com/atlanticaccent/rust-handwritten-json.git" }
unrar = "0.4.4"
opener = "0.5"
directories = "3.0"
tempfile = "^3.2"
compress-tools = "0.14.1"
remove_dir_all = "^0.7.0"
sublime_fuzzy = "0.7.0"
classfile-parser = "~0.3"
zip = "^0.5"
regex = "1.5"
lazy_static = "1.4"
strum = "0.26"
strum_macros = "0.26"
rayon = "1.5"
self_update = { version = "0.29.0", default-features = false }
indexmap = "1.8.0"
rand = "0.8.5"
base64 = "0.13.0"
const_format = "0.2.22"
anyhow = "1.0.57"
flate2 = "1.0"
tar = "0.4"
deunicode = "1.3.2"
ahash = "0.8.11"
thiserror = "1.0.50"
comemo = "0.4.0"
fake = { version = "2.9.2", features = [
  "derive",
  "chrono",
  "chrono-tz",
  "random_color",
] }
extend = "1.2.0"
itertools = "0.12.1"
futures = "0.3.30"
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
http = "1.1.0"
async-trait = "0.1.81"
derive_more = "1.0"
indoc = "2.0"

# [patch.'https://github.com/atlanticaccent/druid-widget-nursery']
# druid-widget-nursery = { path = "../druid-widget-nursery" }

# [patch.'https://github.com/atlanticaccent/druid']
# druid = { path = "../druid/druid" }
