cargo-features = ["codegen-backend"]

# [profile.dev]
# codegen-backend = "cranelift"

[profile.release]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[profile.release-dhat]
inherits = "release"
debug = 1

[workspace]
members = [
  "moss",
  "moss-sys",
  "webview-subsystem",
  "webview-subsystem-shared",
  "proc-macros",
]
resolver = "2"

[workspace.dependencies]
moss-sys = { path = "moss-sys" }
proc-macros = { path = "proc-macros" }
webview-subsystem = { path = "webview-subsystem" }
webview-shared = { path = "webview-subsystem-shared" }

wry = { git = "https://github.com/atlanticaccent/wry.git", branch = "screenshot-v2" }
druid = { git = "https://github.com/atlanticaccent/druid", default-features = false, features = [
  "raw-win-handle",
], branch = "faster-hashing" }
druid-widget-nursery = { git = "https://github.com/atlanticaccent/druid-widget-nursery", default-features = false }
tokio = { version = "1.40.0" }
tokio-util = { version = "0.7" }
infer = "0.16.0"
chrono = { version = "0.4.38" }
serde = { version = "1.0.210", default-features = false }
serde_json = "1.0"
json5 = "0.4.1"
json_comments = "0.2.2"
reqwest = { version = "0.12.8", default-features = false }
serde-aux = "4.5.0"
handwritten-json = { git = "https://github.com/atlanticaccent/rust-handwritten-json.git" }
unrar = "0.4"
opener = "0.7"
directories = "5.0"
tempfile = "^3.13"
compress-tools = "0.15.1"
remove_dir_all = "^0.8.4"
sublime_fuzzy = "0.7.0"
classfile-parser = "~0.3"
zip = "2"
regex = "1.11"
strum = "0.26"
strum_macros = "0.26"
rayon = "1.10"
self_update = { version = "0.41.0", default-features = false }
indexmap = "2.6.0"
rand = "0.8.5"
base64 = "0.22.1"
const_format = "0.2.33"
anyhow = "1.0.89"
flate2 = "1.0"
tar = "0.4"
deunicode = "1.6.0"
ahash = "0.8.11"
thiserror = "1.0.64"
comemo = "0.4.0"
fake = { version = "2.10.0", features = [
  "derive",
  "chrono",
  "chrono-tz",
  "random_color",
] }
extend = "1.2.0"
itertools = "0.13.0"
futures = "0.3.30"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
http = "1.1.0"
async-trait = "0.1.83"
derive_more = "1.0"
indoc = "2.0"
cargo-packager-updater = "0.2"
mimalloc = "0.1.43"

# [patch.'https://github.com/atlanticaccent/druid-widget-nursery']
# druid-widget-nursery = { path = "../druid-widget-nursery" }

# [patch.'https://github.com/atlanticaccent/druid']
# druid = { path = "../druid/druid" }
