[package]
name = "moss-sys"
version = "0.8.0-beta2"
authors = ["ikl"]
edition = "2021"
description = "A mod manager for the game Starsector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
leaky-api = []
dhat-heap = ["dhat"]

[dependencies]
proc-macros = { workspace = true }
webview-subsystem = { workspace = true }
webview-shared = { workspace = true }

druid = { workspace = true, default-features = true, features = [
  "im",
  "serde",
  "raw-win-handle",
  "image",
  "png",
] }
druid-widget-nursery = { workspace = true, default-features = false, features = [
  "material-icons",
  "async",
  "hot-reload",
  "derive",
] }
infer = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "process",
  "macros",
] }
tokio-util = { workspace = true, features = ["rt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
json5 = { workspace = true }
json_comments = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "json",
  "gzip",
  "brotli",
  "deflate",
] }
serde-aux = { workspace = true }
handwritten-json = { workspace = true }
unrar = { workspace = true }
opener = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
compress-tools = { workspace = true }
remove_dir_all = { workspace = true }
sublime_fuzzy = { workspace = true }
classfile-parser = { workspace = true }
zip = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rayon = { workspace = true }
self_update = { workspace = true, default-features = false, features = [
  "rustls",
  "archive-zip",
  "compression-zip-bzip2",
  "compression-zip-deflate",
] }
indexmap = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }
base64 = { workspace = true }
const_format = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
deunicode = { workspace = true }
ahash = { workspace = true }
wry = { workspace = true }
thiserror = { workspace = true }
comemo = { workspace = true }
fake = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true, features = ["from", "into"] }
cargo-packager-updater = { workspace = true }

dhat = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
indoc = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
native-dialog = "0.7"
gtk = { version = "0.18.1" }

[target.'cfg(not(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd")))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"

[[example]]
name = "dim_constraints"
required-features = ["leaky-api"]
