[package]
name = "proc-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", default-features = false }
quote = { version = "1.0.35", default-features = false }
heck = { version = "0.5.0", default-features = false }
itertools = { workspace = true }
proc-macro2 = { version = "1.0", default-features = false }
