[package]
name = "webview-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = [
  "serde_derive",
] }
directories = { workspace = true }
