[package]
name = "webview-subsystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
druid = { workspace = true, default-features = false }
wry = { workspace = true }
tokio = { version = "1.6.0", features = ["fs", "io-util", "rt-multi-thread", "process", "macros"] }
serde = { version = "1.0.126", features = ["derive"] }
interprocess = { git = "https://github.com/kotauskas/interprocess", rev = "5a16b3a" }
bincode = "1.3.3"
rand = "0.8.5"
base64 = "0.13.0"
const_format = "0.2.22"
directories = "3.0"
url = "2.2.2"
tap = "1.0.1"

[dependencies.webview-shared]
path = "../webview-subsystem-shared"
